# SFML-demo

./: CMakeLists.txt
cmake/: FindSFML.cmake
src/: main.cpp
